docs: rewrite CLAUDE.md with accurate commands and architecture
Regenerated CLAUDE.md from the actual codebase via /init.

- fix wrong/nonexistent script refs (run-mongo.sh -> run-mongodb.sh,
  drop push-check.sh which does not exist)
- add required Claude Code guidance header
- document single-test invocation, delombok build noise, the
  test-integration source root + Testcontainers wiring
- explain JbstProperties-centered config, YAML-defined authorities,
  the IAM dual-database (mongo/postgres) design + Liquibase
- capture CI flow and scripted SNAPSHOT/RELEASE version bumps
- trim generic/easily-discoverable boilerplate

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>